--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <router-outlet></router-outlet>
 <app-home></app-home>
+<!-- <app-settings></app-settings> Settings is static (Holds Git, LinkedIn, Youtube Cards-->
