--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,6 @@
   <h1 class="display-4">Hello, User!</h1>
   <p class="lead">Welcome to my First page.</p>
   <hr class="my-4">
-  <a class="btn btn-primary btn-lg" href="#" role="button" (click)="toggleSettings()">Open</a> <!--Make this button open Portfolio-->
+  <a class="btn btn-primary btn-lg" href="https://www.kurtmillercreate.com" target="_blank" role="button">Open</a> <!--Make this button open Portfolio-->
 </div>
-<app-settings *ngIf="!settings"></app-settings>
+<app-settings></app-settings>
