--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" routerLink="" routerLinkActive="active">Dashboard<!--This is the Home Component--></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/portfolio" routerLinkActive="active">Portfolio</a>
+  </li>
+</ul>
 <router-outlet></router-outlet>
-<app-home></app-home>
-
