--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,9 @@
-html { background-color: rgb(53, 53, 53);
+.nav{
+  background-color: #555555;
+}
+a{
+  color: aliceblue;
+}
+a:hover{
+  color: aqua;
 }
