--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,16 @@
-<p>
-  portfolio works!
-</p>
+<div class="container">
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Name</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname Lastname">
+      </div>
+    <div class="form-group">
+      <label for="exampleFormControlInput2">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+    </div>
+  </form>
+</div>
