--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -13,4 +13,7 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
     </div>
   </form>
+  <div class="sendBtn">
+      <button type="button" class="btn btn-primary btn-lg">Send</button>
+    </div>
 </div>
