--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,19 +1,3 @@
 <div class="container">
-<form>
-    <div class="form-group">
-        <label for="exampleFormControlInput1">Name</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname Lastname">
-      </div>
-    <div class="form-group">
-      <label for="exampleFormControlInput2">Email address</label>
-      <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
-    </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-    </div>
-  </form>
-  <div class="sendBtn">
-      <button type="button" class="btn btn-primary btn-lg">Send</button>
-    </div>
+    <h1>About Me</h1>
 </div>
