--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,38 @@
 <div class="container">
     <h1>About Me</h1>
+    <hr class="my-4">
+      <p>
+        Information Technology Specialist
+        Currently seeking a position to apply skills in Customer Service,and Information Technology.
+        With proven track record of Successful Customer Satisfaction and a willingness to adapt and take on new challenges, job tasks, and environments.
+        I aspire to meet customer and business needs and expectations.
+        I retain a high ambition to learn and increase job knowledge, and I am amiable and professional in customer and client interactions.
+      </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="assets/CSI.png" class="cardimg1" alt="...">
+          </div>
+          <div class="col-sm">
+            <!--white space-->
+          </div>
+          <div class="col-sm">
+            <img src="assets/IT.jpg" class="cardimg2" alt="...">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="assets/Angular.png" class="card-img-top" alt="...">
+          </div>
+          <div class="col-sm">
+            <img src="assets/cSharp.png" class="card-img-top" alt="...">
+          </div>
+          <div class="col-sm">
+            <img src="assets/HTML.png" class="card-img-top" alt="...">
+          </div>
+        </div>
+      </div>
+
 </div>
