--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -1,4 +1,17 @@
 .container{
-  padding-top: 100px;
+  padding: 0, 100px, 0, 100px;
   text-align: center;
+}
+.cardimg1 {
+  padding-top: 50px;
+  width: 300px;
+  height: 400px;
+}
+.cardimg2 {
+  padding-top: 25px;
+  width: 300px;
+  height: 400px;
+}
+h2{
+  padding-top: 100px;
 }
