--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -7,7 +7,7 @@
         <div class="card-body">
             <h5 class="card-title">{{cards.title}}</h5>
             <p class="card-text">{{cards.desc}}</p>
-            <a href="{{cards.url}}" target="_blank" class="btn btn-primary">Learn More</a>
+            <a href="{{cards.url}}" target="_blank" class="btn btn-primary">Open</a>
         </div>
       </div>
     </div>
