--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-  <h1 class="display-4">Hello, User!</h1>
-  <p class="lead">Welcome to my First page.</p>
+  <h1 class="display-4">Hello Visitor,</h1>
+  <p class="lead">Welcome to my site.</p>
   <hr class="my-4">
-  <a class="btn btn-primary btn-lg" href="https://www.kurtmillercreate.com" target="_blank" role="button">Open</a> <!--Make this button open Portfolio-->
+  <a class="btn btn-primary btn-lg" href="https://www.kurtmillercreate.com" target="_blank" role="button">Go to my Site</a> <!--Make this button open Portfolio-->
 </div>
 <app-settings></app-settings>
