--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -11,18 +11,11 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img src="assets/CSI.png" class="cardimg1" alt="...">
+            <img src="assets/CSI.png" class="card-img-top" alt="...">
           </div>
           <div class="col-sm">
-            <!--white space-->
+            <img src="assets/IT.jpg" class="card-img-top" alt="...">
           </div>
-          <div class="col-sm">
-            <img src="assets/IT.jpg" class="cardimg2" alt="...">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
           <div class="col-sm">
             <img src="assets/Angular.png" class="card-img-top" alt="...">
           </div>
