--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -1,6 +1,7 @@
 .container{
-  padding: 0, 100px, 0, 100px;
+  padding-top: 50px;
   text-align: center;
+  padding-bottom: 25px;
 }
 .cardimg1 {
   padding-top: 50px;
